# homenect

./: .dockerignore  .gitignore  Cargo.toml  README.md  rustfmt.toml
applications/backup-ingestion-node/: Cargo.toml  README.md
applications/backup-laptop-cli/: Cargo.toml
applications/client-backup-cli/: Cargo.toml
applications/client-backup-cli/src/: main.rs
applications/server/: Cargo.toml  Dockerfile  README.md
applications/server/src/: main.rs
crates/opendal-iroh/: Cargo.toml
crates/proto-control/: Cargo.toml
crates/proto-control/src/: lib.rs
