[package]
name = "server"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
iroh = { version = "0.92.0", default-features = false }
iroh-blobs = { version = "0.94.0", default-features = false }

proto-control = { path = "../../crates/proto-control"}

[lints]
workspace = true
