[package]
name = "opendal-iroh"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
opendal = { version = "0.54.0", default-features = false }
iroh = { version = "0.92.0", default-features = false }
iroh-blobs = { version = "0.94.0", default-features = false }

[lints]
workspace = true
